5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1691_2474.log
== TEST (2019-04-24 23:06:44) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
h=(q+((13*(m+1))/5)+(g%100)+((g%100)/4)+((g/100)/4)+(5*(g/100))
print(h)	
-- ERROR:
File "XXXX", line 5
    print(h)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:07:56) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
h=(q+((13*(m+1))/5)+(g%100)+((g%100)/4)+((g/100)/4)+(5*(g/100))

	print(h)
-- ERROR:
File "XXXX", line 6
    print(h)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:08:09) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
h=(q+((13*(m+1))/5)+(g%100)+((g%100)/4)+((g/100)/4)+(5*(g/100))

print(h)
-- ERROR:
File "XXXX", line 6
    print(h)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:09:26) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+(5*j)

print(h)
-- ERROR:
File "XXXX", line 8
    print(h)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 23:09:51) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
H=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+(5*j)
print(H)

-- EXECUTION TIME:
0.149823
-- ERROR:
  File "/home/codebench/codes/1691/2474/main.py", line 7
    print(H)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:09:52) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
H=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+(5*j)
print(H)

-- ERROR:
File "XXXX", line 7
    print(H)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:10:36) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
H=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+(5*j)
t=H
print(t)	

-- ERROR:
File "XXXX", line 7
    t=H
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:10:49) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
H=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+(5*j)

-- ERROR:
File "XXXX", line 7
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:10:58) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
H=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+(5*j)
-- ERROR:
File "XXXX", line 7
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:11:20) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
-- ERROR:
File "XXXX", line 7
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:11:46) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
print(k)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:12:10) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:12:44) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
h=(q+(13*(m+1)/5)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:14:02) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
h=(q+(13*(m+1)/5))
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:15:00) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
h=(q+(13*(m+1)/5))+k+(k/4)+(j/4)+5*j
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:15:11) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
k=g%100
j=g/100
h=(q+(13*(m+1)/5))+k+(k/4)+(j/4)+5*j
print(h)
-- OUTPUT:
162.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:18:03) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1
   k=g%100
   j=g/100
   h=(q+(13*(m+1)/5))+k+(k/4)+(j/4)+5*j

-- ERROR:
File "XXXX", line 7
    k=g%100
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:18:26) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1
   
-- ERROR:
File "XXXX", line 7
    k=g%100
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:18:53) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=g/100
h=(q+(13*(m+1)/5))+k+(k/4)+(j/4)+5*j
	
-- ERROR:
File "XXXX", line 7
    k=g%100
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:19:11) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=g/100
h=(q+(13*(m+1)/5))+k+(k/4)+(j/4)+5*j

print(int(h))
	
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:22:50) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=g/100
h=(q+(13*(m+1)/5))+k+(k/4)+(j/4)+5*j

print(int(h))
	
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:23:02) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=g/100
h=(q+(13*(m+1)/5))+k+(k/4)+(j/4)+5*j

print(int(h))
	
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:25:38) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=g/100
j=int(j)
h=(q+(13*(m+1)/5))+k+(k/4)+(j/4)+5*j

print(int(h))
	
-- OUTPUT:
191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:37:13) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1
else:
	m=m-2

k=g%100
j=g/100
j=int(j)
h=((700+((26*m-2)/10)+q+k+(k/4)+((j/4)+5*j))%7

print(h)
	
-- ERROR:
File "XXXX", line 15
    print(h)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:37:53) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1
else:
	m=m-2

k=g%100
j=g/100
j=int(j)
h=((700+((26*m-2)/10))+q+k+(k/4)+((j/4)+5*j))%7

print(h)
	
-- OUTPUT:
6.9500000000000455
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:38:28) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1
else:
	m=m-2

k=g%100
j=g/100
j=int(j)
h=((700+((26*m-2)/10))+q+k+(k/4)+((j/4)+5*j))%7
h=int(h)
print(h)
	
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:42:36) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1
else:
	m=m-2

k=g%100
j=g/100
j=int(j)
h=((700+((26*m-2)/10))+q+k+(k/4)+((j/4)+5*j))%7
h=int(h)
if(h==0):
	   h="domingo"
elif(h==1):
	   h="segunda"
elif(h==2):
	   h="terca"
elif(h==3):
	   h="quarta"
elif(h==4):
      h="quinta"
elif(h==5):
	   h="sexta"
elif(h==6):
	   h="sabado"
print(h)	
-- OUTPUT:
sabado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:43:14) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1
else:
	m=m-2

k=g%100
j=g/100
j=int(j)
h=((700+((26*m-2)/10))+q+k+(k/4)+((j/4)+5*j))%7
print(h)
if(h==0):
	   h="domingo"
elif(h==1):
	   h="segunda"
elif(h==2):
	   h="terca"
elif(h==3):
	   h="quarta"
elif(h==4):
      h="quinta"
elif(h==5):
	   h="sexta"
elif(h==6):
	   h="sabado"
print(h)	
-- OUTPUT:
6.9500000000000455
6.9500000000000455
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:46:46) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=g/100
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7
print(h)
if(h==0):
	   h="domingo"
elif(h==1):
	   h="segunda"
elif(h==2):
	   h="terca"
elif(h==3):
	   h="quarta"
elif(h==4):
      h="quinta"
elif(h==5):
	   h="sexta"
elif(h==6):
	   h="sabado"
print(h)	
-- OUTPUT:
3.5374999999999943
3.5374999999999943
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:47:34) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=int(g/100)
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7
print(h)
if(h==0):
	   h="domingo"
elif(h==1):
	   h="segunda"
elif(h==2):
	   h="terca"
elif(h==3):
	   h="quarta"
elif(h==4):
      h="quinta"
elif(h==5):
	   h="sexta"
elif(h==6):
	   h="sabado"
print(h)	
-- OUTPUT:
2.75
2.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:48:25) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=int(g/100)
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7
h=int(h)
print(h)
if(h==0):
	   h="domingo"
elif(h==1):
	   h="segunda"
elif(h==2):
	   h="terca"
elif(h==3):
	   h="quarta"
elif(h==4):
      h="quinta"
elif(h==5):
	   h="sexta"
elif(h==6):
	   h="sabado"
print(h)	
-- OUTPUT:
2
terca
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 23:49:12) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=int(g/100)
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7
h=int(h)
if(h==1):
	   h="domingo"
elif(h==2):
	   h="segunda"
elif(h==3):
	   h="terca"
elif(h==4):
	   h="quarta"
elif(h==5):
      h="quinta"
elif(h==6):
	   h="sexta"
elif(h==0):
	   h="sabado"
print(h)	
-- OUTPUT:
segunda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 23:49:25) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=int(g/100)
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7
h=int(h)
if(h==1):
	   h="domingo"
elif(h==2):
	   h="segunda"
elif(h==3):
	   h="terca"
elif(h==4):
	   h="quarta"
elif(h==5):
      h="quinta"
elif(h==6):
	   h="sexta"
elif(h==0):
	   h="sabado"
print(h)	
-- EXECUTION TIME:
0.143921
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 23:50:20) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=int(g/100)
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7
h=int(h)
if(h==1):
	   h="domingo"
elif(h==2):
	   h="segunda-feira"
elif(h==3):
	   h="terca-feira"
elif(h==4):
	   h="quarta-feira"
elif(h==5):
      h="quinta-feira"
elif(h==6):
	   h="sexta-feira"
elif(h==0):
	   h="sabado"
print(h)	
-- EXECUTION TIME:
0.20892
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:14:14) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=int(g/100)
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7
h=int(h)
if(h==1):
	   h="domingo"
elif(h==2):
	   h="segunda-feira"
elif(h==3):
	   h="terca-feira"
elif(h==4):
	   h="quarta-feira"
elif(h==5):
      h="quinta-feira"
elif(h==6):
	   h="sexta-feira"
elif(h==0):
	   h="sabado"
print(h)	
-- EXECUTION TIME:
0.144607
-- TEST CASE 1:
---- input:
29
2
2016
---- correct output:
segunda-feira
---- user output:
segunda-feira
-- TEST CASE 2:
---- input:
1
3
2016
---- correct output:
terca-feira
---- user output:
terca-feira
-- TEST CASE 3:
---- input:
10
1
2018
---- correct output:
quarta-feira
---- user output:
quarta-feira
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:44:08) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=int(g/100)
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7
h=int(h)
if(h==1):
	   h="domingo"
elif(h==2):
	   h="segunda-feira"
elif(h==3):
	   h="terca-feira"
elif(h==4):
	   h="quarta-feira"
elif(h==5):
      h="quinta-feira"
elif(h==6):
	   h="sexta-feira"
elif(h==0):
	   h="sabado"
print(h)	
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:44:27) 
-- CODE:
q=int(input("Digite o dia do mes "))
m=int(input("Digite o mes: "))
g=int(input("Digite o ano: "))
if(m==1)or(m==2):
	m=m+12
	g=g-1

k=g%100
j=int(g/100)
h=(q+((13*(m+1))/5)+k+(k/4)+(j/4)+5*j)%7
h=int(h)
if(h==1):
	   h="domingo"
elif(h==2):
	   h="segunda-feira"
elif(h==3):
	   h="terca-feira"
elif(h==4):
	   h="quarta-feira"
elif(h==5):
      h="quinta-feira"
elif(h==6):
	   h="sexta-feira"
elif(h==0):
	   h="sabado"
print(h)	
-- OUTPUT:
segunda-feira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
